[package]
name = "botox"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
futures-util = "0.3"
futures = "0.3"
indexmap = { version = "2.1", features = ["serde"] }
rand = "0.8"
log = "0.4"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.tokio]
version = "1"
default-features = true
features = ["full"]

[features]
default = []
