[package]
name = "botox"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
rand = "0.8"
log = "0.4"
extract_map = { version = "0.1.0", features = ["serde", "iter_mut"] }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.tokio]
version = "1"
default-features = true
features = ["full"]

[features]
default = []
